<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculatorTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30dp"
        android:padding="25dp"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/one"></Button>

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/two"></Button>

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/three"></Button>

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/plus"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/four"></Button>

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/five"></Button>

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/six"></Button>

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/minus"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seven"></Button>

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/eight"></Button>

        <Button
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nine"></Button>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/multiply"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/clear"></Button>

        <Button
            android:id="@+id/btn0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/zero"></Button>

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/equals"></Button>

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/divide"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:text="@string/advanced_scientific"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/advLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:paddingTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnModulus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/modulus"></Button>

        <Button
            android:id="@+id/btnPow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pow"></Button>

        <Button
            android:id="@+id/btnMax"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/max"></Button>

        <Button
            android:id="@+id/btnMin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min"></Button>
    </LinearLayout>

</LinearLayout>